hphp/hack/test/typecheck/as_expression/valid_hints.php.rust_elab.exp
File "valid_hints.php", line 5, characters 6-11:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
